--- a/WebApplication1/WebApplication1/appsettings.json
+++ b/WebApplication1/WebApplication1/appsettings.json
@@ -7,7 +7,7 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MVC;Integrated Security=True;Trusted_Connection=True;User Id=DemoUser;Password=appDemoUser;"
-        "LocalConnection": "Server=tcp:loclinn.database.windows.net,1433;Initial Catalog=InnData;Persist Security Info=False;User ID=renautis;Password={1q2w3e$R%T};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+        "DefaultConnection": "Server=tcp:loclinn.database.windows.net,1433;Initial Catalog=InnData;Persist Security Info=False;User ID=renautis;Password={1q2w3e$R%T};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+        "LocalConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MVC;Integrated Security=True;Trusted_Connection=True;User Id=DemoUser;Password=appDemoUser;"
     }
 }
